feat(edit code / UI): -  코드 정리     - Entity / DTO가 서로 다른지 확인 및 분리 완료     - DTO와 Request, Response의 차이점과 역할 정리 및 사용 예시 확인     - Entity / DTO 분리 및 적용 완료     - Controller와 Service 분리 작업 완료     - 전체적인 코드 흐름 검토 및 정리 완료
-  프로필 수정 후 실시간 데이터 업데이트 되지 않던 문제 해결
    - 에서 NotificationCenter를 사용하여 프로필 데이터 갱신 시 UI 즉시 반영되도록 수정
    - 에서 프로필 페이지의 UI 업데이트 함수 호출로 UI 갱신