@@ -1,7 +1,9 @@
 package com.spacewanderer.space_back.config;
 
+import java.util.Arrays;
 import java.util.List;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -15,29 +17,19 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 @EnableWebSecurity
 public class SecurityConfig {
 
+    @Value("${cors.allowedOrigins}")
+    private String allowedOrigins;
+
+    @Value("${security.requestMatchers}")
+    private String[] requestMatchers;
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
             .csrf(csrf -> csrf.disable())  // CSRF 보호 비활성화 (필요시)
             .authorizeHttpRequests(auth -> auth
                 .requestMatchers(
-                    "/", 
-                    "/api/v1/auth/oauth2/apple-login", 
-                    "/api/v1/auth/oauth2/auto-login", 
-                    "/api/v1/auth/oauth2/apple-delete/*",
-                    "/api/v1/auth/oauth2/kakao-login",
-                    "/api/v1/auth/oauth2/kakao-delete/*",
-                    "/api/v1/auth/oauth2/get-kakao-user/*",
-                    "/api/v1/auth/oauth2/get-kakao-access-token",
-                    "/api/v1/user/profile-write/*",
-                    "/api/v1/user/profile-update/*",
-                    "/api/v1/user/check-nickname/*",
-                    "/api/v1/walk/day-walking",
-                    "/api/v1/walk/last-recorded-date/*",
-                    "/api/v1/planet/*",
-                    "/api/v1/user/update-planet/*",
-                    "/api/v1/user/*",
-                    "/api/v1/user/calendar/steps/*"
+                    requestMatchers
                 ).permitAll()  // 인증 없이 접근 가능 경로
                 .anyRequest().authenticated()  // 다른 요청은 인증 필요
             );
@@ -48,11 +40,9 @@ public class SecurityConfig {
     @Bean
     protected CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of(
-            "http://localhost:1020",           // 로컬 테스트 주소
-            "http://192.168.1.14:1020",         // 실기기에서 접근할 IP 주소
-            "http://192.168.0.226:1020"
-        ));
+        // 콤마로 구분된 allowedOrigins 문자열을 리스트로 변환
+        List<String> originsList = Arrays.asList(allowedOrigins.split(","));
+        configuration.setAllowedOrigins(originsList);
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);  // 자격 증명 허용
